--- a/src/resources/main.qss
+++ b/src/resources/main.qss
@@ -41,7 +41,19 @@ QSlider::handle:horizontal
     margin: 0px -5px;
 }
 
-QTreeWidget::branch:closed:has-children
+QTreeWidget
+{
+    show-decoration-selected: 1;
+}
+
+/*QTreeWidget::item:hover, QTreeWidget::branch:hover
+{
+    color: rgb(43, 179, 246);
+    text-decoration-line: underline;
+}*/
+
+
+/*QTreeWidget::branch:closed:has-children
 {
     image: url(:/images/tree_close.png);
 }
@@ -58,14 +70,9 @@ QTreeWidget::item
     background-color: transparent;
 }
 
-QTreeWidget::item:hover, QTreeWidget::branch:hover
-{
-    color: rgb(43, 179, 246);
-    text-decoration: underline;
-    cursor: pointer;
-}
+
 
 QTreeWidget::item:selected, QTreeWidget::branch:selected
 {
     background-color: rgb(0, 160, 230);
-}
+}*/
