--- a/src/resources/main.qss
+++ b/src/resources/main.qss
@@ -45,3 +45,44 @@ QTreeWidget
     show-decoration-selected: 1;
 }
 
+QTabBar
+{
+    border-bottom: none;
+}
+
+QTabWidget::pane
+{
+    background-color: white;
+}
+
+QTabBar::tab
+{
+    background: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,
+    stop: 0 #fafafa, stop: 0.4 #f4f4f4,
+    stop: 0.5 #e7e7e7, stop: 1.0 #fafafa);
+    border: 1px solid black;
+    border-bottom: none;
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
+    min-width: 100px;
+    padding: 4px;
+    margin-left: 3px;
+}
+
+QTabBar::tab:selected
+{
+    border-left: none;
+    border-top: none;
+    border-bottom: none;
+    background-color: white;
+}
+
+QTabBar::close-button
+{
+    image: url(:/images/close_black.svg);
+}
+
+QTabBar::close-button:hover
+{
+    image: url(:/images/close_red.svg);
+}
