--- a/src/resources/main.qss
+++ b/src/resources/main.qss
@@ -1,4 +1,9 @@
-﻿QToolBar
+﻿QMainWindow
+{
+    background-color: rgb(228, 229, 231);
+}
+
+QToolBar
 {
     background-color: white;
     border: none;
@@ -58,20 +63,19 @@ QTabWidget::pane
 
 QTabBar::tab
 {
-    background: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,
-    stop: 0 #fafafa, stop: 0.4 #f4f4f4,
-    stop: 0.5 #e7e7e7, stop: 1.0 #fafafa);
-    border: 1px solid black;
+    background: rgb(235, 236, 237);
+    border: 1px solid rgb(179, 179, 179);
     border-bottom: none;
     border-top-left-radius: 4px;
     border-top-right-radius: 4px;
-    min-width: 100px;
-    padding: 4px;
+    padding: 6px;
     margin-left: 3px;
 }
 
 QTabBar::tab:selected
 {
+    font-weight: bold;
+    padding: 4px;
     border-left: none;
     border-top: none;
     border-bottom: none;
