--- a/src/resources/res.qrc
+++ b/src/resources/res.qrc
@@ -18,6 +18,8 @@
         <file>app.ico</file>
         <file>left_arrow_normal.svg</file>
         <file>right_arrow_normal.svg</file>
+        <file>left_arrow_disabled.svg</file>
+        <file>right_arrow_disabled.svg</file>
     </qresource>
     <qresource prefix="/qss">
         <file>main.qss</file>
