Remove and add svg files

--- a/src/resources/res.qrc
+++ b/src/resources/res.qrc
@@ -21,8 +21,7 @@
         <file>left_arrow_disabled.svg</file>
         <file>right_arrow_disabled.svg</file>
         <file>update.svg</file>
-        <file>dot_normal.svg</file>
-        <file>dot_hover.svg</file>
+        <file>dot.svg</file>
     </qresource>
     <qresource prefix="/qss">
         <file>main.qss</file>
