--- a/src/resources/main.qss
+++ b/src/resources/main.qss
@@ -97,8 +97,13 @@ QTabBar::tab
     border-bottom: none;
     border-top-left-radius: 4px;
     border-top-right-radius: 4px;
-    padding: 4px;
+    padding: 6px;
     margin-left: 3px;
+}
+
+QTabBar::tab:first
+{
+    margin-left: 5px;
 }
 
 QTabBar::tab:selected
@@ -153,4 +158,9 @@ QTabWidget::pane
 {
     background-color: white;
     border-top: none;
+}
+
+QGraphicsView
+{
+    border: none;
 }
