--- a/src/resources/res.qrc
+++ b/src/resources/res.qrc
@@ -1,4 +1,7 @@
 <RCC>
+    <qresource prefix="/qss">
+        <file>main.qss</file>
+    </qresource>
     <qresource prefix="/images">
         <file>app.ico</file>
         <file>branch.svg</file>
@@ -9,6 +12,7 @@
         <file>left_arrow_disabled.svg</file>
         <file>left_arrow_normal.svg</file>
         <file>open.svg</file>
+        <file>pane_icon.svg</file>
         <file>pause.svg</file>
         <file>play.svg</file>
         <file>record.svg</file>
@@ -24,8 +28,5 @@
         <file>tab_close_hover.svg</file>
         <file>tab_close_normal.svg</file>
         <file>update.svg</file>
-    </qresource>
-    <qresource prefix="/qss">
-        <file>main.qss</file>
     </qresource>
 </RCC>
